# atomicOS

./: .gitignore  README.md  pyproject.toml
docs/images/: README.md
openspec/changes/archive/2026-06-28-build-atomicos-desktop-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-build-atomicos-desktop-app/specs/desktop-note-workflow/: spec.md
openspec/changes/archive/2026-06-28-build-atomicos-desktop-app/specs/obsidian-vault-integration/: spec.md
openspec/changes/archive/2026-06-28-build-atomicos-desktop-app/specs/remote-ollama-synthesis/: spec.md
openspec/changes/archive/2026-06-28-build-atomicos-desktop-app/specs/responsive-flet-interface/: spec.md
openspec/changes/archive/2026-07-01-add-diagnostic-logging-and-ai-healthcheck/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-01-add-diagnostic-logging-and-ai-healthcheck/specs/desktop-note-workflow/: spec.md
openspec/changes/archive/2026-07-01-add-diagnostic-logging-and-ai-healthcheck/specs/obsidian-vault-integration/: spec.md
openspec/specs/desktop-note-workflow/: spec.md
openspec/specs/obsidian-vault-integration/: spec.md
openspec/specs/operational-diagnostics/: spec.md
openspec/specs/remote-ollama-synthesis/: spec.md
openspec/specs/responsive-flet-interface/: spec.md
scripts/: smoke_dry_run.py
src/atomicos/: __init__.py  config.py  diagnostics.py  errors.py  main.py  ollama.py  ui.py  vault.py  workflow.py
tests/: test_diagnostics.py  test_ollama.py  test_ui.py  test_vault.py  test_workflow.py
(+3 files in other folders)
