[project]
name = "atomicos"
version = "0.1.0"
description = "Desktop assistant for synthesizing atomic Obsidian notes with a remote Ollama server."
requires-python = ">=3.11"
dependencies = [
    "flet>=0.25.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
atomicos = "atomicos.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
